--- a/HOLA/src/main/webapp/Inicio.html
+++ b/HOLA/src/main/webapp/Inicio.html
@@ -5,15 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link REL=StyleSheet HREF="estilo/estilo.css" TYPE="text/css" MEDIA=screen>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<title>Biblioteca</title>
+<title>Inicio sesión</title>
 </head>
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script type="text/javascript" src="JavaScript/Login.js"></script>
 
 
 <body>
-	<section class="vh-100">
+	<section class="vh-100">a
 		<div class="container-fluid h-custom">
 			<div
 				class="row d-flex justify-content-center align-items-center h-100">
@@ -44,6 +43,8 @@
 								style="padding-left: 2.5rem; padding-right: 2.5rem;"
 								onclick="peticion()">Login</button>
 						</div>
+						
+						
 
 					</form>
 				</div>
